workspace-sf/force-app/main/default/objects/ProdutoOPIN__c/ProdutoOPIN__c.object-meta.xml
<CustomObject>
    <label>Produto OPIN</label>
    <nameField>
        <label>Nome de Produto OPIN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos OPIN</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>