workspace-sf/force-app/main/default/objects/ProdutoOPIN__c/fields/CatalogoOPIN__c.field-meta.xml
<CustomField>
    <fullName>CatalogoOPIN__c</fullName>
    <label>Catálogo OPIN</label>
    <referenceTo>CatalogoOPIN__c</referenceTo>
    <relationshipLabel>Produtos OPIN</relationshipLabel>
    <relationshipName>Produtos_OPIN</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>