workspace-sf/force-app/main/default/objects/ProdutoOPIN__c/fields/DetalhesJson__c.field-meta.xml
<CustomField>
    <fullName>DetalhesJson__c</fullName>
    <label>Detalhes em Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>