workspace-sf/force-app/main/default/objects/ProdutoOPIN__c/fields/SiglaProduto__c.field-meta.xml
<CustomField>
    <fullName>SiglaProduto__c</fullName>
    <label>Sigla do Produto</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>