workspace-sf/force-app/main/default/objects/ProdutoOPIN__c/fields/SistemaOrigem__c.field-meta.xml
<CustomField>
    <fullName>SistemaOrigem__c</fullName>
    <label>Sistema Origem</label>
    <length>50</length>
    <type>Text</type>
</CustomField>